Fix post list overflowing into it's padding.

--- a/www/style.css
+++ b/www/style.css
@@ -34,7 +34,6 @@ body {
 
 #postlisting {
     border: solid black 3px;
-    width: 100%;
     padding: 0;
     height: 400px;
     overflow: auto;
